<resources>
    <string name="app_name">Dosmios Delivery</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_colon">:</string>
    <string name="order_id">Order Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="accept">ACCEPT</string>
    <string name="santhosh">Santhosh</string>
    <string name="_123456789">123456789</string>
    <string name="_9876543210">9876543210</string>
    <string name="dwarakanagar">Dwarakanagar</string>
    <string name="order_details">Order Details</string>
    <string name="cancel">CANCEL</string>
    <string name="cash">cash</string>
    <string name="order_delivered">ORDER DELIVERED</string>
    <string name="pickup_order">PICKUP ORDER</string>
    <string name="collect_cash">COLLECT CASH</string>
    <string name="pickup_orders">PickUp Orders</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="cod">COD</string>
    <string name="online">ONLINE</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="cash_payment">CASH PAYMENT</string>
    <string name="type_comments">Type Comments</string>
    <string name="submit_comments">Submit Remarks</string>
    <string name="type_comments_here">Type Comments here</string>
    <string name="submit">SUBMIT</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="no_pickup_orders_found">No PickUp Orders Found</string>
    <string name="tool_home">HOME</string>
    <string name="no_orders_tv">Wiating for new Ordes</string>
    <string name="payment_option">Payment Option</string>
    <string name="payment_status">Payment Status</string>
    <string name="total_amount">Total Amount</string>
    <string name="new_orders">New Orders</string>
    <string name="google_pay_number">Google Pay Number</string>
    <string name="payment">Payment</string>
    <string name="brackets">()</string>
    <string name="payment_details">Payment Details</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="alternative_number">Alternative Number</string>
</resources>
