<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_oreder_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/order_details"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/pb_pbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_newOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_oreder_details"
        android:layout_margin="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/order_id"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="@string/_123456789"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/customer_name"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="@string/santhosh"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/mobile_number"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="sans-serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="@string/_9876543210"
                    android:textColor="#000"
                    android:textSize="13sp" />
                <ImageView
                    android:id="@+id/imageCall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/ic_baseline_call_24"
                    android:contentDescription="@string/app_name" />
                <ImageView
                    android:id="@+id/imageWhatsapp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/ic_whatsapp"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/alternative_number"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvAlterNative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="@string/_9876543210"
                    android:textColor="#000"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/date_amp_time"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="02/06/2020  03:00 PM"
                    android:textColor="#000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/payment_option"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_paymentType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="Online"
                    android:textColor="#000"
                    android:textSize="13sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/payment_status"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_paymentStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="Paid"
                    android:textColor="#000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/delivery_address"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:maxLines="4"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="@string/dwarakanagar"
                    android:textColor="#000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/total_amount"
                    android:textColor="#000"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/string_colon"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_ttlAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:maxLines="4"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="Rs: 500"
                    android:textColor="#000"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/cv_newOrder"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_above="@id/tv_pick_order"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_pick_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickup_order"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>


</RelativeLayout>